--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="name">Sandy - Updated in Second Branch</h1>
+        <h1 id="name">Sandy</h1>
         <p class="bio">
-           I love Garlic Shrimp — Updated on second branch!
+           I love Garlic Shrimp
         </p>
 
         <button id="btn">Click Me!</button>
