--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="name">Sandy</h1>
+        <h1 id="name">Your Name</h1>
         <p class="bio">
-           I love Garlic Shrimp
+            Write a short bio about yourself here. Your hobbies, interests, or what you enjoy learning.
         </p>
 
         <button id="btn">Click Me!</button>
